CHANGES
=======

* Add new 'gerrit project branch show' command
* Add new 'gerrit project branch list' command
* Add small changes before package and distribute python-gerritclient
* Add new 'gerrit project repo-statistics show' command
* Add new 'gerrit project head set' command
* Align url path building
* Add new 'gerrit project head show' command
* Add new 'gerrit project parent set' command
* Add new 'gerrit project parent show' command
* Add new 'gerrit project description set' command
* Add new 'gerrit project description show' command
* Add Documentation Status badge
* Add new 'gerrit change fix' command
* Add new 'gerrit change check' command
* Add Sphinx support
* Update 'gerrit change comments list' command
* Add option '-d/--draft' to 'gerrit change comment list' command
* Add new 'gerrit change comment list' command
* Check the response not empty before fetching columns
* Replace special characters in {change\_id} using the %xx escape
* Add new 'gerrit change index' command
* Add new 'gerrit change included-in show' command
* Add new 'gerrit change draft publish' command
* Add new 'gerrit change assignee delete' command
* Add new 'gerrit change assignee set' command
* Add new 'gerrit change assignee history show' command
* Add new 'gerrit change assignee show' command
* Add new 'gerrit change delete' command
* Add new 'gerrit change submit' command
* Add new 'gerrit change move' command
* Add new 'gerrit change rebase' command
* Add new 'gerrit change revert' command
* Add new 'gerrit change restore' command
* Add new 'gerrit change abandon' command
* Add new 'gerrit change create' command
* Add new 'gerrit change topic delete' command
* Add new 'gerrit change topic set' command
* Add new 'gerrit change topic show' command
* Add '-o/--option' to 'gerrit change list' command
* Add new 'gerrit change list' command
* Add '-o/--option' to 'gerrit change show' command
* Add '-a/-all' argument to 'gerrit change show'
* Add new 'gerrit change show' command