@@ -399,6 +399,39 @@ class ProjectBranchShow(ProjectMixIn, base.BaseShowCommand):
         return self.columns, data
 
 
+class ProjectBranchCreate(ProjectMixIn, base.BaseShowCommand):
+    """Creates a new branch."""
+
+    columns = ('ref',
+               'revision',
+               'can_delete',
+               'web_links')
+
+    def get_parser(self, app_name):
+        parser = super(ProjectBranchCreate, self).get_parser(app_name)
+        parser.add_argument(
+            '-b',
+            '--branch',
+            required=True,
+            help='The name of a branch or HEAD. '
+                 'The prefix refs/heads/ can be omitted.'
+        )
+        parser.add_argument(
+            '-r',
+            '--revision',
+            help='The base revision of the new branch. '
+                 'If not set, HEAD will be used as base revision.'
+        )
+        return parser
+
+    def take_action(self, parsed_args):
+        response = self.client.create_branch(parsed_args.entity_id,
+                                             branch_name=parsed_args.branch,
+                                             revision=parsed_args.revision)
+        data = utils.get_display_data_single(self.columns, response)
+        return self.columns, data
+
+
 def debug(argv=None):
     """Helper to debug the required command."""
 
